#24: add merge roles after upload

--- a/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-edit/script-edit.component.html
@@ -36,6 +36,7 @@
         <h3 class="mb-0">Rollen</h3>
         <button
           (click)="openModal(mergeRolesModal)"
+          *ngIf="script?.roles.length > 1"
           class="btn btn-sm btn-outline-primary"
           type="button"
         >
