#28: add auto-scroll and start-/endpage indicator

--- a/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.scss
@@ -15,6 +15,18 @@ h5 {
   font-weight: 400;
 }
 
+.section-span {
+  height: 0.5rem;
+  background-color: rgb(0 0 0 / 7%);
+
+  .indicator {
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+  }
+}
+
 .marking {
   transition: transform 200ms ease;
   width: 100%;
