--- a/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.html
+++ b/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.html
@@ -1,11 +1,22 @@
 <div class="card overflow-hidden position-relative" style="width: 18rem">
-  <div class="card-body">
+  <div class="card-body py-3 px-3">
     <h5
+      [class.text-primary]="active"
       class="card-title mb-0 d-flex justify-content-between align-items-center"
     >
-      <span>Abschnitt 1</span>
-      <!--<bi name="play-fill"></bi>-->
+      {{ section?.name }}
     </h5>
+    <h6 class="text-secondary mb-0">
+      Seite {{ section?.getStartPage(this.script) }} -
+      {{ section?.getEndPage(this.script) }}
+    </h6>
   </div>
-  <div [class.active]="active" class="marking"></div>
+  <div class="section-span w-100 position-relative">
+    <div
+      [class]="active ? 'bg-primary' : 'bg-secondary'"
+      [style.left.%]="startLinePercentage"
+      [style.right.%]="100 - endLinePercentage"
+      class="indicator"
+    ></div>
+  </div>
 </div>
