--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.html
@@ -1,11 +1,18 @@
 <app-page-layout [loading]="getLoading" [showSidebar]="true" theme="dark">
   <app-script-viewer></app-script-viewer>
-  <div role="sidebar">
+  <div class="d-flex flex-column flex-grow-1" role="sidebar">
     <h2 class="mb-4">Lernabschnitt festlegen</h2>
+    <!--<app-rehearsal-section></app-rehearsal-section>-->
     <app-rehearsal-section
-      (click)="selectSection(section)"
       *ngFor="let section of sections"
-      [active]="section === (scriptViewerService.$markedSection | async)"
+      [section]="section"
     ></app-rehearsal-section>
+    <div class="flex-grow-1"></div>
+    <div class="d-flex justify-content-center mt-3">
+      <app-button
+        [disabled]="(scriptViewerService.$markedSection | async) === null"
+        label="Abschnitt proben"
+      ></app-button>
+    </div>
   </div>
 </app-page-layout>
