--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
@@ -18,6 +18,7 @@
         >
       </ng-container>
     </div>
+    <!-- TODO: remove toggle when only viewing mode, as it throws errors -->
     <p
       [class.fst-italic]="isInstruction"
       [class.highlighted]="
@@ -52,11 +53,5 @@
     </ng-template>
   </div>
 </div>
-<div
-  *ngIf="(scriptViewerService.$markedSection | async)?.startLine === line.index"
-  class="marking start-line"
-></div>
-<div
-  *ngIf="(scriptViewerService.$markedSection | async)?.endLine === line.index"
-  class="marking end-line"
-></div>
+<div *ngIf="section?.startLine === line.index" class="marking start-line"></div>
+<div *ngIf="section?.endLine === line.index" class="marking end-line"></div>
