--- a/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.scss
@@ -12,6 +12,7 @@ bi {
 }
 
 h5 {
+  transition: color 150ms ease-in-out;
   font-weight: 400;
 }
 
@@ -20,6 +21,7 @@ h5 {
   background-color: rgb(0 0 0 / 7%);
 
   .indicator {
+    transition: background-color 150ms ease-in-out;
     border-radius: 3px;
     position: absolute;
     top: 0;
