--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.html
@@ -1,15 +1,24 @@
+<!--
+  No padding-top on page but on the first line, because otherwise the background color for this gap
+  could not be dimmed if the first line is not in the section
+ -->
 <div
   *ngIf="showPage"
-  class="page bg-light mx-auto rounded py-5 d-flex flex-column"
+  [class.is-not-in-section]="isNotInSection(page?.lines[page.lines.length - 1])"
+  class="page mx-auto rounded d-flex flex-column"
 >
   <div class="d-flex flex-column flex-grow-1 justify-content-between">
     <div class="wrapper">
       <app-script-line
         *ngFor="let line of page?.lines; let i = index"
+        [class.is-not-in-section]="isNotInSection(line)"
+        [class.pt-5]="i === 0"
         [line]="line"
         [prevLine]="page?.lines[i - 1]"
       ></app-script-line>
     </div>
-    <div class="d-flex justify-content-center mt-3">{{ page?.index }}</div>
+    <div class="d-flex justify-content-center pt-3 pb-5">
+      {{ page?.index }}
+    </div>
   </div>
 </div>
