--- a/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/rehearsal-section/rehearsal-section.component.scss
@@ -1,9 +1,19 @@
 :host {
+  transition: box-shadow 150ms ease-in-out;
   display: block;
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &.is-active {
     box-shadow: 0 0 10px rgb(0 0 0 / 5%);
+
+    h5 {
+      color: var(--bs-primary);
+    }
+
+    .section-span .indicator {
+      background-color: var(--bs-primary);
+    }
   }
 }
 
@@ -13,7 +23,12 @@ bi {
 
 h5 {
   transition: color 150ms ease-in-out;
+  font-weight: 500;
+}
+
+h6 {
   font-weight: 400;
+  color: rgb(0 0 0 / 35%);
 }
 
 .section-span {
@@ -23,22 +38,9 @@ h5 {
   .indicator {
     transition: background-color 150ms ease-in-out;
     border-radius: 3px;
+    background-color: var(--bs-secondary);
     position: absolute;
     top: 0;
     bottom: 0;
-  }
-}
-
-.marking {
-  transition: transform 200ms ease;
-  width: 100%;
-  height: 0.3rem;
-  background-color: var(--bs-primary);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-
-  &:not(.active) {
-    transform: translateY(100%);
   }
 }
