--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
@@ -53,12 +53,8 @@
     </ng-template>
   </div>
 </div>
-<div
-  *ngIf="section?.startLine === line.index"
-  @appear
-  class="marking start-line"
->
-  <span>{{ section?.name }}</span>
+<div *ngIf="section?.startLine === line.index" class="marking start-line">
+  <span>{{ section?.name || 'Start' }}</span>
 </div>
 <div *ngIf="section?.endLine === line.index" class="marking end-line">
   <span>Ende</span>
