--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.scss
@@ -1,5 +1,20 @@
-:host:not(:last-of-type) .page {
-  margin-bottom: 3rem;
+:host {
+  &:not(:last-of-type) .page {
+    margin-bottom: 3rem;
+  }
+
+  &:not(.is-editing) {
+    app-script-line:not(.is-not-in-section) {
+      z-index: 1; // to have section markings always on top of other script-lines
+    }
+
+    app-script-line,
+    .page {
+      &.is-not-in-section {
+        background-color: rgba(220, 220, 220) !important;
+      }
+    }
+  }
 }
 
 .page {
@@ -9,17 +24,7 @@
   box-shadow: 0 8px 17px 0 rgb(0 0 0 / 8%);
 }
 
-app-script-line:not(.is-not-in-section) {
-  z-index: 1; // to have section markings always on top of other script-lines
-}
-
 app-script-line,
 .page {
-  //transition: background-color 200ms ease-in-out;
-  // explicitely define bg color, so that bg-color transition is equally fast for line and page
   background-color: var(--bs-light);
-
-  &.is-not-in-section {
-    background-color: rgba(220, 220, 220) !important;
-  }
 }
