--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
@@ -38,7 +38,7 @@ main {
 
   & > .wrapper {
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: var(--max-grid);
   }
 
   &.is-dark-theme::-webkit-scrollbar-thumb {
