#35: started implementing lazy page load

--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -80,6 +80,8 @@
     'overflow: hidden' on the root element).
   -->
   <main
+    (load)="onScrollMain($event)"
+    (scroll)="onScrollMain($event)"
     [class.is-dark-theme]="theme === 'dark'"
     class="w-100 p-5 d-flex flex-column"
   >
