--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-page/script-page.component.html
@@ -7,7 +7,10 @@
   [class.is-not-in-section]="isNotInSection(page?.lines[page.lines.length - 1])"
   class="page mx-auto rounded d-flex flex-column"
 >
-  <div class="d-flex flex-column flex-grow-1 justify-content-between">
+  <div
+    *ngIf="renderedContent; else loading"
+    class="d-flex flex-column flex-grow-1 justify-content-between"
+  >
     <div class="wrapper">
       <app-script-line
         *ngFor="let line of page?.lines; let i = index"
@@ -21,5 +24,12 @@
       {{ page?.index }}
     </div>
   </div>
+  <ng-template #loading>
+    <div class="h-100 d-flex justify-content-center align-items-center">
+      <div class="spinner-border text-secondary" role="status">
+        <span class="sr-only"></span>
+      </div>
+    </div>
+  </ng-template>
 </div>
 <!-- TODO: also dim page if only one line in section -->
