#32: fixed leaving script bug

--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -54,6 +54,7 @@
                 Ansehen
               </button>
               <button
+                *ngIf="isOwner()"
                 ngbDropdownItem
                 routerLink="/scripts/{{ script?.id }}/edit"
               >
