#27: displaying which scripts the user owns and which script member is the owner

--- a/frontend/src/app/modules/features/scripts/components/script-list/script-list-item/script-list-item.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-list/script-list-item/script-list-item.component.html
@@ -10,7 +10,7 @@
         class="card-img"
         src="../../../../../../assets/illustrations/script_{{
           isCreate ? 'plus_' : ''
-        }}cropped.svg"
+        }}cropped{{ script?.owner ? '_owner' : '' }}.svg"
       />
     </div>
     <div *ngIf="!isCreate" class="card-img-overlay">
