--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-members-list/script-members-list.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-members-list/script-members-list.component.html
@@ -4,5 +4,6 @@
     *ngFor="let member of members"
     [member]="member"
     [isOwner]="isOwner"
+    [owner]="members[0]"
   ></app-script-members-item>
 </div>
