--- a/frontend/src/app/modules/features/scripts/components/script-read/script-read.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-read/script-read.component.html
@@ -8,6 +8,7 @@
     <strong>Fehler!</strong> Skript wurde nicht gefunden.
   </app-alert>
   <ng-template #noError>
+    <app-script-read-controls></app-script-read-controls>
     <app-script-viewer></app-script-viewer>
   </ng-template>
 </app-page-layout>
