--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.html
@@ -2,7 +2,11 @@
   <app-script-viewer></app-script-viewer>
   <div class="d-flex flex-column flex-grow-1" role="sidebar">
     <ng-container *ngIf="curStep === steps.selectSection">
-      <h2 class="mb-4">Lernabschnitt auswählen</h2>
+      <h2 class="mb-0">Lernabschnitt auswählen</h2>
+      <app-back-button
+        (click)="backToOverview()"
+        label="Zurück zur Übersicht"
+      ></app-back-button>
       <app-rehearsal-section
         (click)="changeStep(steps.createSection)"
         [isCreate]="true"
@@ -11,16 +15,6 @@
         *ngFor="let section of sections"
         [section]="section"
       ></app-rehearsal-section>
-      <div class="flex-grow-1"></div>
-      <div class="d-flex flex-column align-items-stretch mt-3">
-        <button
-          (click)="backToOverview()"
-          class="btn btn-outline-secondary"
-          type="button"
-        >
-          Zurück zur Übersicht
-        </button>
-      </div>
     </ng-container>
     <app-rehearsal-section-create
       (cancel)="changeStep(steps.selectSection)"
