--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal.component.html
@@ -3,9 +3,11 @@
   class="layout vh-100 bg-light overflow-hidden d-flex flex-column align-items-center px-5"
 >
   <div class="grid">
-    <ng-container *ngFor="let line of session?.getLines(script)">
+    <ng-container *ngFor="let line of session?.getLines()">
       <app-rehearsal-line
-        [@lineAppear]="line.index >= session?.currentLine ? 'active' : 'hidden'"
+        [@lineAppear]="
+          line.index >= session?.currentLineIndex ? 'active' : 'hidden'
+        "
         [line]="line"
       ></app-rehearsal-line>
     </ng-container>
