--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
@@ -36,7 +36,7 @@
       </button>
       <button
         (click)="removeRoles()"
-        *ngIf="line.roles.length > 0"
+        *ngIf="line.roles?.length > 0"
         ngbDropdownItem
       >
         Als Instruktion markieren
