--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -72,7 +72,8 @@ label {
   }
 }
 
-.no-select {
+.no-select,
+.tooltip {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
