--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -7,6 +7,7 @@
           (roleClicked)="selectRole($event)"
           [roles]="script?.roles"
           [selectedRole]="selectedRole"
+          [showTooltips]="true"
           size="xl"
           theme="primary"
         ></app-script-roles-list>
