--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.html
@@ -1,12 +1,16 @@
 <app-page-layout [loading]="getLoading" [showSidebar]="true" theme="dark">
   <app-script-viewer></app-script-viewer>
   <div class="d-flex flex-column flex-grow-1" role="sidebar">
+    <h2 class="mb-0 d-flex">
+      <div class="role-name text-truncate">Mister Breckingham</div>
+      üben
+    </h2>
+    <app-back-button
+      (click)="backToOverview()"
+      label="Zurück zur Übersicht"
+    ></app-back-button>
     <ng-container *ngIf="curStep === steps.selectSection">
-      <h2 class="mb-0">Lernabschnitt auswählen</h2>
-      <app-back-button
-        (click)="backToOverview()"
-        label="Zurück zur Übersicht"
-      ></app-back-button>
+      <h3 class="mb-3">Wähle einen Lernabschnitt:</h3>
       <app-rehearsal-section
         (click)="changeStep(steps.createSection)"
         [isCreate]="true"
