#68: fix lint erros and todos

--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
@@ -14,11 +14,11 @@
         <span
           *ngFor="let role of line?.roles; let i = index"
           class="d-inline-block"
-        >{{ role.name }}{{ i < line?.roles.length - 1 ? ', ' : '' }}</span
+          >{{ role.name }}{{ i < line?.roles.length - 1 ? ', ' : '' }}</span
         >
       </ng-container>
     </div>
-    <!-- TODO: remove toggle when only viewing mode, as it throws errors -->
+    <!-- TODO: remove dropdown toggle when only viewing mode, as it throws errors -->
     <p
       [class.fst-italic]="isInstruction"
       [class.highlighted]="
