--- a/frontend/src/app/modules/features/scripts/components/script-editor/script-editor.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-editor/script-editor.component.html
@@ -76,7 +76,7 @@
         [fullWidth]="true"
         [loading]="loading"
         class="mb-2"
-        label="Skript abpeichern"
+        label="Skript abspeichern"
         type="submit"
       ></app-button>
       <button
