--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-line/rehearsal-line.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-line/rehearsal-line.component.scss
@@ -7,14 +7,14 @@
   align-items: flex-end;
 
   &:not(.is-active) {
-    .role-name,
+    .role-names,
     p {
       opacity: 25%;
     }
   }
 
   &.is-highlighted {
-    .role-name {
+    .role-names {
       color: var(--bs-primary);
     }
   }
@@ -24,12 +24,16 @@
   }
 }
 
-.role-name,
+.role-names,
 p {
   transition: opacity 200ms ease-in-out;
   font-size: 1.8rem;
 }
 
-.role-name {
+.role-names {
   font-weight: 600;
+
+  .name:not(:last-of-type):after {
+    content: ', ';
+  }
 }
