#44 basic speech synthesis

--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
@@ -21,6 +21,33 @@
       src="../../../../../../../assets/icons/forward.svg"
     />
   </app-controls-item>
+
+  <app-controls-item
+    (click)="paused = true"
+    ngbTooltip="Pause"
+    [class.disabled]="endSessionLoading"
+    *ngIf="!paused"
+  >
+    <img
+      alt="Pause"
+      class="icon"
+      src="../../../../../../../assets/icons/pause.svg"
+    />
+  </app-controls-item>
+
+  <app-controls-item
+    (click)="paused = false"
+    ngbTooltip="Abspielen"
+    [class.disabled]="endSessionLoading"
+    *ngIf="paused"
+  >
+    <img
+      alt="Pause"
+      class="icon"
+      src="../../../../../../../assets/icons/play.svg"
+    />
+  </app-controls-item>
+
   <app-controls-item
     (click)="openModal(stopSessionModal)"
     ngbTooltip="Beenden"
