--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal.component.html
@@ -13,4 +13,4 @@
     </ng-container>
   </div>
 </div>
-<app-rehearsal-controls></app-rehearsal-controls>
+<app-rehearsal-controls (readLine)="readLine()"></app-rehearsal-controls>
