#68: cache sessions and refactor session fetch

--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
@@ -51,7 +51,7 @@
        >{{ this.deleteError }}</app-alert
      >-->
     Sicher, dass du diese
-    <strong class="text-primary"> Übungseinheit beenden</strong>
-    möchtest?<br/>
+    <strong class="text-primary"> Übungseinheit vorläufig beenden</strong>
+    möchtest?<br />
   </app-modal>
 </ng-template>
