#38: add voice recording service

--- a/frontend/src/app/modules/features/scripts/components/script-read/script-read-controls/script-read-controls.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-read/script-read-controls/script-read-controls.component.html
@@ -3,10 +3,6 @@
     {{ script?.name }}
   </span>
   <app-controls-item (click)="close()" ngbTooltip="Schließen">
-    <img
-      alt="Beenden"
-      class="icon"
-      src="../../../../../../../assets/icons/cross.svg"
-    />
+    <bi name="x-lg"></bi>
   </app-controls-item>
 </app-controls>
